# CDS_R1_TSR

./: 1HWD.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  src-ld.cpp  update.txt
CDS_R1_TSR/dlib/dlib/svm/: structural_object_detection_trainer.h
CDS_R1_TSR/src/: alldetect.cpp  tsr.cpp
CDS_R1_TSR/svm_detectors/: maximum-speed.svm  minimum-speed-end.svm  minimum-speed.svm  no-entry.svm  stop-give-way.svm
Clip/: abc.avi
ObjectRecognition/: SignRecognition.cpp
capture/: maximum-speed.xml  minimum-speed-end.xml  minimum-speed.xml  no-entry.xml  no-turn-left.xml  stop.xml  turn-left-ahead.xml  turn-right-ahead.xml
dlib_build/: Makefile  cmake_install.cmake
extract_info/: CMakeLists.txt  Makefile
imglab/: maximum-speed.xml  minimum-speed-end.xml  minimum-speed.xml  national-speed-limit.xml  no-entry.xml  no-left-turn.xml  no-right-turn.xml  stop-give-way.xml  turn-left-ahead.xml  turn-right-ahead.xml
lane_detection/: CMakeLists.txt  Makefile
main_pid/: 1.cpp  Uy_maincar.cpp  Uy_maincar_2.cpp  haynhove_uy.cpp  lmao.cpp  test1.cpp  test_OpenMP.cpp  thanh.cpp  tuongnhove_uy.cpp
multilane/: CMakeLists.txt  Makefile  ltadl@192.168.1.22  multilane.cpp  multilane.h
openni2/: openni2.cpp  openni2.h
peripheral_driver/i2c/: api_i2c_pwm.cpp  api_i2c_pwm.h
peripheral_driver/uart/: CMakeLists.txt  Makefile
result/: result.txt
sign_detection/: SignDetection.cpp  SignDetection.h
sign_recognize/: signsRecognizer.cpp
src/: 1.cpp  calib.cpp  detect.cpp  train_object_detector.cpp  tri.cpp  tri_test.cpp  tsr.cpp  tsr_uy.cpp
stereo_vision/: CMakeLists.txt  Makefile  api_kinect_cv.cpp  api_kinect_cv.h  test-kinect-cv2  test-kinect-cv2-2  test_kinect_cv2.cpp
svm_detectors/: GT-00038.svm  object_detector.svm
testcode/: 00-test-recognition.cpp  01-test-recognition.cpp  automaticCar.cpp  justuny@192.168.1.13  maincar.cpp  maincar_  maxspeed.cpp  mycar.cpp  myvision.cpp  test-recongizer.cpp  test-steering-coef.cpp  testSignRecognition.cpp  test_recognnize.cpp  tsr.cpp  vision_test.cpp
